<resources>
    <string name="app_name">BizzWiz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_client">Clients</string>
    <string name="menu_products">Products</string>
    <string name="menu_debts">Debts</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_view_clients">ViewClients</string>
    <string name="title_activity_view_products">ViewProducts</string>
    <string name="title_activity_view_debts">ViewDebts</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="full_names">Full Names</string>
    <string name="confirm_password">Confirm password</string>
</resources>
