<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/list_client_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_people" />

            <TextView
                android:id="@+id/list_client_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/list_second_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/second_name"
                app:layout_constraintEnd_toEndOf="@+id/list_client_name"
                app:layout_constraintStart_toStartOf="@+id/list_client_name"
                app:layout_constraintTop_toBottomOf="@+id/list_client_name" />

            <TextView
                android:id="@+id/list_client_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="@+id/list_second_name"
                app:layout_constraintStart_toStartOf="@+id/list_second_name"
                app:layout_constraintTop_toBottomOf="@+id/list_second_name" />

            <TextView
                android:id="@+id/list_client_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/phone"
                app:layout_constraintEnd_toEndOf="@+id/list_client_email"
                app:layout_constraintStart_toStartOf="@+id/list_client_email"
                app:layout_constraintTop_toBottomOf="@+id/list_client_email" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>